Preventing link inputs from cutting off too early

--- a/frontend/styles/Admin.module.scss
+++ b/frontend/styles/Admin.module.scss
@@ -32,6 +32,9 @@
     margin-bottom: var(--spacing-primary);
     border: 1px solid var(--border-primary-color);
 }
+.link-main {
+    flex: 1;
+}
 .link-content {
     margin-bottom: 10px;
 }
